// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContent renders 1`] = `
<main
  className="sc-AxiKw jAJPxZ ant-layout-content"
>
  <div />
</main>
`;

exports[`Routes renders 1`] = `
Array [
  <main
    className="sc-AxiKw jAJPxZ ant-layout-content"
  >
    <div>
      <div />
    </div>
  </main>,
  ",",
]
`;
